# MagBotSim

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: api_reference.rst  benchmarks.rst  changelog.rst  conf.py  environments.rst  examples_tutorials.rst  index.rst  magbots.rst  spelling_wordlist.txt
docs/_static/css/: custom_theme.css
docs/api_reference/: basic_env.rst  basic_multi_env.rst  basic_single_env.rst  benchmark_utils.rst  geometry_2D_utils.rst  impedance_control.rst  mujoco_utils.rst  rendering.rst  sixD_platform_magbot.rst
docs/benchmarks/: results_object_pushing.rst  results_trajectory_planning.rst
docs/environments/: long_horizon_global_trajectory_planning_env.rst  state_based_global_pushing_env.rst  state_based_push_box_env.rst  state_based_push_l_env.rst  state_based_push_t_env.rst  state_based_push_x_env.rst  state_based_static_obstacle_pushing_env.rst
docs/examples_tutorials/: adding_magbots.rst  applying_controls_and_collision_checking_tutorial.rst  choosing_parent_class.rst  create_env.rst  custom_mover_mesh.rst  customizing_mujoco_model.rst  example_sim2real_transfer.rst  manual_control.rst  mujoco_state.rst  pettingzoo.rst
docs/magbots/: sixD_platform.rst
docs/parameters/: push_box_sac_her_B0.yaml  push_box_sac_nMovers_1.yaml  push_t_sac_her_B0.yaml  push_t_sac_nMovers_1.yaml  pushing_static_obstacle_sac_her_B0.yaml  trajectory_planning_sac_her_B0.yaml
magbotsim/: __init__.py  basic_magbot_env.py
magbotsim/assets/meshes/mover_and_bumper/: planar_motor_M3-15-SD.stl  planar_motor_M3-25-SD.stl  planar_motor_M4-11-SD.stl  planar_motor_M4-18-SD.stl  planar_motor_M4-33-SD.stl
magbotsim/assets/mujoco_xmls/: panda.xml
magbotsim/envs_without_rl_api/magbots/: sixD_platform_application_example_env.py  sixD_platform_example_env.py
magbotsim/envs_without_rl_api/object_manipulation/: panda_box_env.py
magbotsim/magbots/: sixD_platform.py
magbotsim/rl_envs/: basic_multi_agent_env.py  basic_single_agent_env.py
magbotsim/rl_envs/object_manipulation/pushing/: state_based_global_pushing_env.py  state_based_push_box_env.py  state_based_push_l_env.py  (+3 more)
magbotsim/rl_envs/trajectory_planning/: long_horizon_global_trajectory_planning_env.py
magbotsim/utils/: benchmark_utils.py  geometry_2D_utils.py  impedance_control.py  mujoco_utils.py  rendering.py  rotations_utils.py
tests/: test_basic_env.py  test_geometry_2D_utils.py  test_rl_pushing_envs_with_obstacle.py  test_rl_pushing_envs_without_obstacles.py  test_rl_trajectory_planning_envs.py  test_rotations_utils.py
(+37 files in other folders)
