[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magbotsim"
description = "Magentic robotics simulation including reinforcement learning environments based on MuJoCo"
readme = "README.md"
requires-python = ">= 3.11, <3.14"
authors = [{ name = "Lara Bergmann", email = "lara.bergmann@uni-bielefeld.de" }]
keywords = ["Magnetic Robotics", "Reinforcement Learning", "Gymnasium", "PettingZoo", "RL", "AI", "Robotics", "Magnetic Levitation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "numpy",
    "matplotlib",
    "gymnasium>=0.29.1",
    "pettingzoo",
    "mujoco>=3.1.2",
    "imageio",
    "scipy",
    "shapely"
]
dynamic = ["version"]

[project.optional-dependencies]
manual_control = [
    "pygame"
]
tests = [
	"pytest",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinxcontrib.spelling",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinxcontrib-video"
]

[project.entry-points."gymnasium.envs"]
__root__ = "magbotsim.__init__:register_gymnasium_envs"

[project.urls]
Homepage = "https://www.uni-bielefeld.de/fakultaeten/technische-fakultaet/arbeitsgruppen/kollaborative-robotik/"
Repository = "https://github.com/ubi-coro/MagBotSim"
Documentation = "https://ubi-coro.github.io/MagBotSim/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
magbotsim = [
    "assets/**/*.xml",
    "assets/**/*.stl",
    "assets/**/*.STL",
    "assets/**/*.obj",
    "assets/**/*.png",

]

# ruff

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.format]
# Use single quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
# See https://beta.ruff.rs/docs/rules/
select = ["E", "F", "B", "D", "UP", "RUF"]
ignore = ["B028", "D100", "D101", "D103", "D104", "D107", "D203", "D205", "D213", "D301", "D401", "D407", "D414", "RUF012", "RUF013"]
